dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
/* ... */
@media screen and (max-width: $screen-xs-max) {
	@include table-metrics-mobile;

	th.table-cell-vertical-mobile .ui-column-title {
		writing-mode: vertical-lr;
	}
}

.ui-sortable-handle {
	word-break: break-word;
}

/* Change cursor from pointer to default to avoid confusion */
.ui-datatable-selectable td {
	cursor: default;
}

.gridcell .form-control-static.pull-left {
	float: none !important;
}

/* Charts */

.chart-wrapper {
	overflow-x: auto;

	> div {
		min-width: 500px;
	}
}

/* AJAX loading spinner */

#ajaxStatusPanel_start img {
	filter: $ajax_spinner_filter;
}

/* Text selection */

::selection {
	background: $main-color;
	color: #fff;
}

/* Top navbar */

$navbar-height: 102px;

.navbar-fixed-top .navbar-collapse {
	max-height: 22.667em;
	margin-bottom: 1px;
}

#navbarFixed {
	position: sticky;
	background: #fff;
	box-shadow: none;
	border-top: 4px solid $icon-color;
	border-bottom: none;

	.container {
		position: relative;
	}

	#cookie-banner {
		padding: 6px 0 10px 0;
		background: $icon-color;
		color: #fff;
		text-align: center;

		form {
			margin: 0 auto;

			button {
				margin-left: 15px;
				background: $icon-color;
				border-color: #fff;
				color: #fff;
				text-shadow: none;

				&:hover {
					background: #fff;
					color: $icon-color;
				}
			}
		}
	}

	#unconfirmed-mail-banner {
		padding: 6px 0 10px 0;
		background: #feecee;
		color: #f00;
		text-align: center;

		form {
			margin: 0 auto;

			button {
				margin-left: 15px;
				background: #ecabb1;
				border-color: #fff;
				color: #fff;
				text-shadow: none;

				&:hover {
					background: #fff;
					color: #ecabb1;
				}
			}
		}
	}

	.navbar-brand {
		position: relative;
		height: $navbar-height;
		margin-left: -0.333em;
		padding: 0.333em 0.333em 0.333em 0;
		display: table;
		float: none;

		font-size: 1em;
		text-shadow: none;

		#site-logo {
			top: 0.188em;
			left: 0.35em;
			display: inline-block;
			height: 1em;

			font-size: 80px;
			background: url($main-logo);
			background-size: contain;
			background-repeat: no-repeat;
			background-position: center center;

			&.icon-dataverse {
				&::before {
					background: none;
					content: $main-logo-mono;
				}
			}

			+ span {
				padding-left: 94px;
				display: table-cell;
				vertical-align: middle;

				span {
					display: block;
				}
			}
		}

		#site-title {
			font-size: 1.2em;
			font-weight: bold;
			color: $main-color;
		}

		#site-subtitle {
			margin-top: 0.2em;
			font-size: 0.8em;
			line-height: 1.2em;
			color: $main-text-color;
		}
	}

	#navbar-underline {
		position: absolute;
		left: 8px;
		right: 8px;
		height: 100%;
		border-bottom: 1px solid $gray-border-color;
		z-index: -1;
	}
}

.main-menu-container {
	float: right;
	text-align: right;
	margin-top: -18px;
}

.navbar-default {
	.navbar-form {
		border: none;
	}

	#topNavBar .navbar-nav {
		> li {
			float: none;
			display: inline-block;

			> a {
				padding: 10px 20px;
			}

			> a, > form > a {
				color: $main-text-color;
				border-radius: $border-radius;
				text-shadow: none;

				&:hover, &:active, &:focus {
					color: $main-color;
				}

				.caret {
					color: $icon-color;
				}
				&:focus {
					text-decoration: none;
				}
			}
		}

		> form {
			position: relative;
			bottom: 1px;
		}

		.header-flag {
			position: relative;
			bottom: 2px;
			margin-right: 3px;
		}
	}
}

.logos-container,
.main-logo-container,
.superior-logo-container {
	font-size: 15px;
	display: inline-block;
}

.superior-logo-container {
	height: $navbar-height;
	vertical-align: bottom;

	a {
		height: 100%;
		display: inline-block;
	}

	+ .main-logo-container {
		margin-left: 2rem;
	}
}

.main-logo-container {
	position: relative;
	margin-bottom: -0.333em;

	&::after {
		content: " ";
		position: absolute;
		top: 33px;
		bottom: 33px;
		right: -40px;
		width: 1px;
		background: #e8e8e8;
	}
}

.superior-logo {
	height: 100%;
}

@media screen and (max-width: $screen-sm-max) {
	.main-logo-container::after {
		content: none;
	}

	.superior-logo-container + .main-logo-container {
		margin-left: 1.5rem;
	}
}

@media screen and (max-width: $screen-xs-max) {
	.logos-container {
		margin-left: 12px;
	}

	.superior-logo-container + .main-logo-container {
		margin-left: 1rem;
	}
}

body.high-contrast-yellow-on-black .superior-logo.regular,
body:not(.high-contrast-yellow-on-black) .superior-logo.contrast {
	display: none;
}

.language-select.dropdown-menu a {
	padding: 3px 20px;
	clear: both;
	font-weight: 400;
	line-height: 1.42857143;
	white-space: nowrap;
	text-decoration: none;
	display: block;

	&:focus, &:hover {
		background-color: $gray-border-color !important;
	}
}

.navbar-fixed-top #topNavBar.navbar-collapse {
	max-height: calc(100vh - 100px);
}

.dropdown-menu > form > li > a {
	&:hover, &:active, &:focus {
		background-color: $gray-border-color !important;
	}
}

.navbar-default .navbar-toggle {
	margin: 27px;

	.icon-bar {
		width: 30px;
		height: 6px;
		border-radius: 9px;
		background-color: $icon-color;
	}
}

#dataverse-header-block {
	padding-top: 0.8em;
}

.top-messages {
	margin: 8px;
}

@media screen and (min-width: $screen-md-min) {
	#userDisplayInfoTitle {
		max-width: 100px;
		display: inline-block;
		overflow: hidden;
		white-space: nowrap;
		text-overflow: ellipsis;
		vertical-align: bottom;
	}
}

@media screen and (min-width: $screen-lg-min) {
	#userDisplayInfoTitle {
		max-width: 200px;
	}
}
/* ... */

